# KajaaniExchange

./: .gitignore  README.md
CPPCourse/: CPPCourse.cpp  CPPCourse.sln  CPPCourse.vcxproj  CPPCourse.vcxproj.filters  Documentation.md  resource.h
ConsoleRPG/: ConsoleRPG.sln  ReturnWeekly6_code.txt
ConsoleRPG/ConsoleRPG/: Character.cpp  Character.h  ConsoleRPG.cpp  ConsoleRPG.vcxproj  ConsoleRPG.vcxproj.filters  RPGManager.cpp  RPGManager.h  Types.h
KajaaniCPPContinue5/: KajaaniCPPContinue5.sln
KajaaniCPPContinue5/KajaaniCPPContinue5/: KajaaniCPPContinue5.cpp  KajaaniCPPContinue5.vcxproj  KajaaniCPPContinue5.vcxproj.filters
KajaaniQuizApp/: KajaaniQuizApp.sln
KajaaniQuizApp/KajaaniQuizApp/: KajaaniQuizApp.cpp  KajaaniQuizApp.vcxproj  KajaaniQuizApp.vcxproj.filters  quiz.json
Mat_Phys_Kajaani/luuk_kaalvernik/: .gitlab-ci.yml  CMakeLists.txt  README.md  main_aabb.cpp  main_lin_integ.cpp  main_particle.cpp  math_utils.h  simple_math.cpp
Mat_Phys_Kajaani/luuk_kaalvernik/ext/mikroplot-main/: CMakeLists.txt  LICENSE  README.md
Mat_Phys_Kajaani/luuk_kaalvernik/ext/mikroplot-main/examples/: main_mikroplot_demo.cpp
Mat_Phys_Kajaani/luuk_kaalvernik/ext/mikroplot-main/include/mikroplot/: GLUtils.h  framebuffer.h  graphics.h  shader.h  texture.h  window.h
Mat_Phys_Kajaani/luuk_kaalvernik/ext/mikroplot-main/src/: framebuffer.cpp  shader.cpp  texture.cpp  window.cpp
Mat_Phys_Kajaani/luuk_kaalvernik/submissions/: exerc1_particles.cpp  exerc2_springforce.cpp  exerc3_rotation.cpp
Mat_Phys_Kajaani/luuk_kaalvernik/submissions/exerc4_jumpy_game/: jumpy_main.cpp
MemoryGame/: MemoryGame.sln
MemoryGame/MemoryGame/: MemoryGame.cpp  MemoryGame.vcxproj  MemoryGame.vcxproj.filters
MiniGameWithStatistics/MiniGameWithStatistics/: MiniGameWithStatistics.cpp  MiniGameWithStatistics.vcxproj  scores.json
YatzyGame/YatzyGame/: YatzyGame.cpp
